data/derived/comb/progs/unify/prog0225.ml.out
Characters 193-206:
  | h::t -> let rec helper v = helper (v/10) :: h1 mod 10 :: []
                               ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
